--- a/index.html
+++ b/index.html
@@ -110,6 +110,24 @@
             </div>
           </div>
         </div>
+        
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <img class="card-img-top"
+              src="https://upload.wikimedia.org/wikipedia/en/7/7e/Gone_Girl_%28Flynn_novel%29.jpg" alt="" />
+            <div class="card-body">
+              <h5 class="card-title">Gone Girl</h5>
+              <p class="card-text">Nick Dunne, a small town guy who made good in the big city as a magazine writer blames the 
+                recession and the loss of his job for the decline of his marriage to his intellectually superior wife with a substantial 
+                trust fund. Questions of his motives and character begin to arise after his wife's disappearance on the morning of 
+                their fifth anniversary. As the search for his missing wife plays out over the ensuing days, guilty suspicions are 
+                fueled into a national frenzy by the media circus camped outside his house. Is this idyllic, everyman truly capable 
+                of murdering his wife?</p>
+              <a href="https://github.com/JuhiPathak23" class="btn btn-outline-danger btn-sm">Contributed by - Juhi Pathak</a>
+            </div>
+          </div>
+        </div>
+
 
         <div class="col-lg-4 mb-4">
           <div class="card">
